2007-01-13  Keishi Suenaga <skeishi@yahoo.co.jp>

    * timidity/wave_a.c: fix for server interface.

2007-01-12  Keishi Suenaga <skeishi@yahoo.co.jp>

    * timidity/wave_a.c: fix for autofilname.

2007-01-05  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/timidity.c (main): Fix to avoid segmentation fault
	  when "." or nonexistent archive name is given

2007-01-04  Keishi Suenaga <skeishi@yahoo.co.jp>

	Fix -iW and timiditydrv.dll sound problem.
	* timidity/portaudio_a.c: fix buffer overlow.

2007-01-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/midi_a.c (M_FWRITE):
	  Keep backward compatibility for gcc-2.95 or earlier
	* timidity/timidity.c (parse_opt_output_device): Change a bit

2007-01-03  Keishi Suenaga <skeishi@yahoo.co.jp>

	Fix -iW and timiditydrv.dll sound problem.
	* timidity/portaudio_a.c: remove broken acntl()s.

2007-01-01  Keishi Suenaga <skeishi@yahoo.co.jp>

	* timidity/timidity.c, timidity/w32_a.c,
	  timidity/portaudio_a.c: can select output device.

2007-01-01  Kentaro Sato <kentaro@ranvis.com>

	* timidity/playmidi.[ch], timidity/readmidi.c:
	  Added support for GM2 Master Fine/Coarse Tuning, GS Master Tune
	  and XG Master Tuning (4C not 27) SysEx.
	* timidity/readmidi.c: Fix suspected typo.
	* libarc/unlzh.c: Reverted a useless fix of the previous commit.

2006-12-30  Keishi Suenaga <skeishi@yahoo.co.jp>

	* interfece/w32g_pref.c: can change timidity.cfg editor
	  by environment valuable TIMIDITY_CFG_EDITOR.

2006-12-29  Kentaro Sato <kentaro@ranvis.com>

	* timidity/controls.[ch]: Changed argument type of std_write().
	* timidity/midi_a.c: Imploved system independency.
	* libarc/unlzh.c: Fixed vulnerabilities named
	  CVE-2006-4335, CVE-2006-4337, CVE-2006-4338.

2006-12-27  Keishi Suenaga <skeishi@yahoo.co.jp>

	* timidity/portaudio_a.c: bug fix
	* interface/w32g_pref.c, interface/w32g_pref.h,
	  w32_portaudio_dll.c: asio dialog in win GUI.

2006-12-26  Keishi Suenaga <skeishi@yahoo.co.jp>

	* timidity/portaudio_a.c,