@@ -435,8 +435,6 @@ static int open_output(void)
 
 #if !defined (IA_W32GUI) && !defined (IA_W32G_SYN)
   if (dpm.name == NULL) {
-    if (!current_file_info || !current_file_info->filename)
-      return -1;
     dpm.flag |= PF_AUTO_SPLIT_FILE;
   }
   else {
@@ -629,8 +627,11 @@ static int acntl(int request, void *arg)
 {
   switch(request) {
   case PM_REQ_PLAY_START:
-    if(dpm.flag & PF_AUTO_SPLIT_FILE)
-      return auto_speex_output_open(current_file_info->filename,current_file_info->seq_name);
+    if(dpm.flag & PF_AUTO_SPLIT_FILE){
+      if(  ( NULL == current_file_info ) || (NULL == current_file_info->filename ) )
+        return auto_speex_output_open("Output.mid",NULL);
+      return auto_speex_output_open(current_file_info->filename, current_file_info->seq_name);
+   }
     return 0;
   case PM_REQ_PLAY_END:
     if(dpm.flag & PF_AUTO_SPLIT_FILE)
